--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "server",
+  "name": "@battle-dots/server",
   "module": "index.ts",
   "type": "module",
   "private": true,
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/express": "^5.0.1",
     "@types/node": "^22.13.13"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
-    "hono": "^4.7.5",
+    "express": "^4.21.2",
     "socket.io": "^4.8.1"
   }
 }
